--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,6 @@ extends layout
 block content
   h1 Un Cordobes en Berlin
   h2 Experiancia de un cordobes viviendo en Berlin.
-  p Hola soy Maxi, este es mi blog, nace con el doble proposito de aprender diseno web e informar a mis seres queridos de mi experiencia al otro lado del charco... 
-  
-    a(href='/post1') post1
+  p Hola, soy Maxi un cordobes radicado de momento en la ciudad de Berlin. Intentare por este medio compartir mis impresiones y sensaciones de la capital alemana siempre contraponiendala con nuestra querida Docta.. Tratare de comparar esas pequnas cosas y momentos q hacen a la vida cotidiana de estas dos urbes con sus distintas particularidades. 
+   
+  a(href='/post1') post1
