add foto background

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,2 +1,12 @@
 html
-  background-color pink
+  background-image url(/img/arcoBranderburg.png)
+  background-size: 25%
+
+#content 
+  max-width 1000px
+  background-color white
+  margin auto
+  h1
+    text-align: center;
+    font-size: 40px
+    color: blue
