--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,14 @@
 html {
-  background-color: #ffc0cb;
+  background-image: url("/img/arcoBranderburg.png");
+  background-size: 25%;
+}
+#content {
+  max-width: 1000px;
+  background-color: #fff;
+  margin: auto;
+}
+#content h1 {
+  text-align: center;
+  font-size: 40px;
+  color: #00f;
 }
