--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,14 @@
 html {
   background-image: url("/img/arcoBranderburg.png");
   background-size: 25%;
+  font-family: monospace;
 }
 #content {
   max-width: 1000px;
   background-color: #fff;
+  box-shadow: 0px 0px 20px #000;
+  border-radius: 5px;
+  padding: 0 25px 25px 25px;
   margin: auto;
 }
 #content h1 {
