--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,10 +1,14 @@
 html
   background-image url(/img/arcoBranderburg.png)
   background-size: 25%
+  font-family: monospace;
 
 #content 
   max-width 1000px
   background-color white
+  box-shadow: 0px 0px 20px black;
+  border-radius: 5px;
+  padding: 0 25px 25px 25px;
   margin auto
   h1
     text-align: center;
