--- a/views/index.jade
+++ b/views/index.jade
@@ -6,4 +6,4 @@ block content
     h2 Experiencia de un cordobes viviendo en Berlin.
     p Hola, soy Maxi un cordobes radicado de momento en la ciudad de Berlin. Intentare por este medio compartir mis impresiones y sensaciones de la capital alemana siempre contraponiendala con nuestra querida Docta.. Tratare de comparar esas pequnas cosas y momentos q hacen a la vida cotidiana de estas dos urbes con sus distintas particularidades. 
    
-    a(href='/post1') post1
+    a(href='/frases') frases
