--- a/views/post.jade
+++ b/views/post.jade
@@ -1,3 +1,10 @@
 extends layout
 block content
-  p este es mi post
+  h1 Frases Populares
+  p Saludo de Despedida:
+    BERLIN: "Nos vemos Doctor!" (Hauste rinn Atze)                  
+    CORDOBA: "Chau nero culiao"
+    
+    Comentar belleza femenima
+    BERLIN: "Oh mira esa mujer hermosa!" (“Kiek ma – die Olle da druehm!”)
+    CORDOBA: "Ta ma buena q comer flan con la mano"
