--- a/views/index.jade
+++ b/views/index.jade
@@ -2,11 +2,23 @@ extends layout
 
 block content
   #content
-    h1 Un Cordobes en Berlin
-    h2 Experiencia de un cordobes viviendo en Berlin.
-    p Hola, soy Maxi un cordobes radicado de momento en la ciudad de Berlin. Intentare por este medio compartir mis impresiones y sensaciones de la capital alemana siempre contraponiendola con nuestra querida Docta.. Tratare de comparar esas pequeñas cosas y momentos que hacen a la vida cotidiana de estas dos urbes con sus distintas particularidades. ***SITIO MOMENTANEAMENTE EN CONSTRUCCION*** 
-      a(href='/graffiti') GRAFFITI
+    h1 HABITACIONES INDIVIDUALES UNC CORDOBA (0351) 460-7907 / 153-247596
+    h2 Residencia Universitaria en Cordoba.
+
+    p Alquilo Habitaciones INDIVIDUALES a 6 cuadras de CIUDAD 
+      | UNIVERSITARIA. Las habitaciones se encuentran amuebladas (cama, 
+      | colchon, escritorio, placard, etc.). La casa esta equipada y en 
+      | todo el lugar hay señal WIFI. El lugar tiene mucho patio con 
+      | mucho espacio abierto. El bº tiene mucho verde (la casa da a un 
+      | gran parque) y es muy tranquilo (ideal para estudiar) SOLO 
+      | ESTUDIANTES TRANQUILOS. Cualquier Consulta a los telefonos o al 
+      | email: habitacionescordoba@gmail.com 
     
-    <iframe title="YouTube video player" class="youtube-player" type="text/html" width="425" height="349" src="http://www.youtube.com/embed/Bx51eegLTY8" frameborder="0" allowFullScreen></iframe>
-    <iframe title="YouTube video player" class="youtube-player" type="text/html" width="425" height="349" src="http://www.youtube.com/embed/APQA8vOC7zk" frameborder="0" allowFullScreen></iframe>
-  
+    img.fotoportada(src="/img/casa1.jpg")
+
+    img.fotoportada(src="/img/casa3.jpg")
+
+    img.fotoportada(src="/img/casa4.jpg")
+
+    img.fotoportada(src="/img/casa2.jpg")
+
