--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,6 +1,7 @@
 html
-  background-image url(/img/arcoBranderburg.png)
-  background-size: 25%
+  background-image url(/img/casa_portada.jpg)
+  background-size: 100%;
+  background-position: center;
   font-family: monospace;
 
 #content 
@@ -14,3 +15,11 @@ html
     text-align: center;
     font-size: 40px
     color: blue
+
+  h2
+    text-align: center;
+    font-size: 25px
+
+  .fotoportada
+    width 250px
+    height 200px
